# miniONNXRuntime

./: .gitignore  CMakeLists.txt  README.en.md  README.md
assets/: readme_showcase.html
docs/: architecture.md  blog_graph_optimization.md  cuda_ep_status.md  dev_log.md  execution_provider.md  gpt2_onnx_gap_analysis.md  memory_optimization.md  phase5_execution_provider_summary.md  phase5_gpt2_cpu_bringup.md  phase6_gpt_text_pipeline.md
docs/phases/: README.en.md  README.md  phase1.en.md  phase1.md  phase2.en.md  phase2.md  phase3.en.md  phase3.md  phase4.en.md  phase4.md  phase5.en.md  phase5.md  phase6.en.md  phase6.md  phase7.en.md  phase7.md
examples/gpt2_tiny/: README.md  kv_cache_generate.cfg  story_generate.cfg  story_prompt.txt  tiny_generate.cfg
examples/qwen2_5_0_5b/: kv_generate.cfg
examples/yolo_tiny/: README.md
include/miniort/loader/: onnx_loader.h
include/miniort/model/: graph.h
include/miniort/optimizer/: graph_optimizer.h
include/miniort/runtime/: accelerate_execution_provider.h  builtin_kernels.h  cpu_execution_provider.h  cpu_tensor_allocator.h  cuda_execution_provider.h  execution_context.h  execution_provider.h  kernel_registry.h  memory_profile.h  profiling.h  session.h  tensor.h  tensor_allocator.h
include/miniort/tools/: gpt2_cache_binding.h  gpt2_tokenizer.h  image_loader.h  phase_output.h  yolo_detection.h
models/: README.md
notes/: README.md  blog_gpt2_kv_cache_runtime.md  chat_web_demo.md  graph_optimization_record.md  qwen_next_steps.md
scripts/: download_models.sh  export_qwen_int8_onnx.py  export_qwen_kv_onnx.py  export_qwen_onnx.py  fetch_gpt2.sh  fetch_tiny_gpt2.sh  run_phase.sh  setup_linux_env.sh
src/loader/: onnx_loader.cc
src/minionnxruntime/: __init__.py
src/minionnxruntime/kernels/: __init__.py
src/minionnxruntime/memory/: __init__.py
src/minionnxruntime/model/: __init__.py
src/minionnxruntime/optimizer/: __init__.py
src/minionnxruntime/runtime/: __init__.py
src/model/: graph.cc
src/optimizer/: graph_optimizer.cc
src/runtime/: accelerate_execution_provider.cc  basic_kernels.cc  builtin_kernel_groups.h  builtin_kernels.cc  cpu_execution_provider.cc  cpu_tensor_allocator.cc  cuda_elementwise_kernels.cu  cuda_elementwise_kernels.h  cuda_execution_provider.cc  elementwise_kernels.cc  execution_context.cc  kernel_registry.cc  kernel_utils.h  memory_profile.cc  nn_kernels.cc  session.cc  shape_kernels.cc  tensor.cc
src/tools/: gpt2_cache_binding.cc  gpt2_tokenizer.cc  image_loader.cc  yolo_detection.cc
tests/: README.md  runtime_tests.cc
tools/: chat_web_demo.py  compare_providers.cc  detect_yolov8n.cc  inspect_model.cc  memory_trace.cc  optimize_model.cc  plot_gpt2_timing_matplotlib.py  plot_gpt2_timing_svg.py  run_gpt.cc  run_gpt_text.py  run_model.cc  session_trace.cc
